minor ui improvements*

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ debug.log
 gemini_capture.pcap
 gemini_req_dump.log
 http_req_dump_gemini.log
-
+__debug_bin1251162204
+__debug_bin2573934534
+cmd/cerebro/__debug_bin1145252479
+internal/ui/__debug_bin3020988144
